Updated data for a different part

--- a/app/partials/road.html
+++ b/app/partials/road.html
@@ -59,7 +59,7 @@
                     <div class="panel-body">
                         <dl>
                             <dt>Работа</dt>
-                            <dd>{{stresses.A}}</dd>
+                            <dd>{{stresses.A}} Н*мм</dd>
                         </dl>
                     </div>
                 </div>
